--- a/src/main/resources/templates/admin/404.html
+++ b/src/main/resources/templates/admin/404.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{/admin/head :: headContent}">
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>404 Error - SB Admin</title>
+    <link href="../../../../../../../../../Downloads/startbootstrap-sb-admin-gh-pages/css/styles.css" rel="stylesheet" />
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div id="layoutError">
@@ -10,9 +18,9 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <div class="text-center mt-4">
-                            <img class="mb-4 img-error" th:src="@{/admin/assets/img/error-404-monochrome.svg}" />
+                            <img class="mb-4 img-error" src="../../../../../../../../../Downloads/startbootstrap-sb-admin-gh-pages/assets/img/error-404-monochrome.svg" />
                             <p class="lead">This requested URL was not found on this server.</p>
-                            <a th:href="@{/api/admin}">
+                            <a href="index.html">
                                 <i class="fas fa-arrow-left me-1"></i>
                                 Return to Dashboard
                             </a>
@@ -38,6 +46,6 @@
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-<script th:src="@{/admin/js/scripts.js}"></script>
+<script src="../../../../../../../../../Downloads/startbootstrap-sb-admin-gh-pages/js/scripts.js"></script>
 </body>
 </html>
