--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -24,7 +24,7 @@
                         <nav class="sb-sidenav-menu-nested nav">
                             <a class="nav-link" th:href="@{/api/admin/layout-static}">Movie</a>
                             <a class="nav-link" th:href="@{/api/admin/layout-sidenav-light}">Light Sidenav</a>
-                            <a class="nav-link" th:href="@{/api/movie/register}">영화정보 등록하기</a>
+                            <a class="nav-link" th:href="@{/api/admin/theater/layout-static}">Theater</a>
                             <a class="nav-link" th:href="@{/api/movie/update}">영화정보 수정하기</a>
                         </nav>
                     </div>
